--- a/naunet/templates/cvode/include/naunet_constants.h.j2
+++ b/naunet/templates/cvode/include/naunet_constants.h.j2
@@ -1,5 +1,6 @@
 #ifndef __NAUNET_CONSTANTS_H__
 #define __NAUNET_CONSTANTS_H__
+// clang-format off
 
 {% if info.device == "gpu" %}
 extern __constant__ double pi;
